  have to be recompiled to still work.  It does have to be recompiled to fix
  an event-queue bug, since the fix involved a change to the event-loop macro.

R4.2 changes:

o Atoms and visuals are now correctly maintained in a separate namespace from 
  windows, pixmaps, cursors, fonts, gcontexts, and colormaps.

o I have made an attempt to make socket code work for kcl and ibcl.  I have
  akcl here, but not kcl and ibcl, so it's only guesswork that kcl and ibcl 
  works.

o compile-clx and load-clx do more pathname merging to work around problems
  in some lisp implementations. *default-pathname-defaults* is never bound 
  anymore.

o Some ansi common lisp stuff.  If you have :ansi-common-lisp on *features*,
  CLX will:

  - Use the common-lisp package instead of the lisp package.

  - Use the common lisp condition system, being careful not to stomp on 
    define-condition and type-error.

  - Use declaim instead of proclaim.

  - Use the dynamic-extent declaration for rest args and closures.

  - Use print-unreadable-object.

o Code compiled with the R4 and R4.1 CLX will work with the R4.2 CLX, provided
  you don't have :ansi-common-lisp on your features list.  Code compiled with 
  the R4.2 CLX will NOT work with the R4 CLX.

R4.3 changes:

o A new package.l file has been introduced.  All the package operations that
  were in the other files have been moved to package.l.  Because of this, 
  the compile-clx and load-clx functions which are defined in the defsystem.l
  file have been moved to the user package from the xlib package, since the xlib 
  package isn't defined when the defsystem.l file is loaded.

o excldefsys.l has been merged into defsystem.l.  You don't have to rename
  excldefsys.l to defsystem.l anymore.

o User-specified-size/position-p hints are now set correctly.
  These hints were being ignored if the size-hints structure did not
  define the corresponding geometry slots. But ICCCM declares these
  slots to be obsolete.