@@ -2176,11 +2176,10 @@
 	   (values (list string))))
 
 (defsetf wm-command (window) (command)
-  ;; Uses PRIN1 to a string-stream with the following bindings:
-  ;; (*print-length* nil) (*print-level* nil) (*print-radix* nil)
-  ;; (*print-base* 10.) (*print-array* t) (*package* (find-package 'lisp))
-  ;; each element of command is seperated with NULL characters.
-  ;; This enables (mapcar #'read-from-string (wm-command window))
+  ;; Uses PRIN1 inside the ANSI common lisp form WITH-STANDARD-IO-SYNTAX (or
+  ;; equivalent), with elements of command separated by NULL characters.  This
+  ;; enables 
+  ;;   (with-standard-io-syntax (mapcar #'read-from-string (wm-command window)))
   ;; to recover a lisp command.
   (declare (type window window)
 	   (type (list stringable) command)))
