@@ -65,3 +65,9 @@ o User-specified-size/position-p hints are now set correctly.
   These hints were being ignored if the size-hints structure did not
   define the corresponding geometry slots. But ICCCM declares these
   slots to be obsolete.
+
+o (setf wm-command) has been changed to use PRIN1 inside the ANSI Common Lisp
+  form WITH-STANDARD-IO-SYNTAX (or equivalent), with elements of command
+  separated by NULL characters.  This enables 
+    (with-standard-io-syntax (mapcar #'read-from-string (wm-command window)))
+  to recover a lisp command.
